@@ -2,6 +2,14 @@ Revision history for libev, a high-performance and full-featured event loop.
 
 TODO: ev_walk
 TODO: signal handling per loop
+TODO: signalfd
+
+TODO: document signalfd procmask
+	- incompatible change: do not necessarily reset signal handler
+          to SIG_DFL when a sighandler is stopped.
+	- take advantage of signalfd on GNU/Linux systems.
+	- document that the signal mask might be in an unspecified
+          state when using libev's signal handling.
 
 3.7  Fri Jul 17 16:36:32 CEST 2009
 	- ev_unloop and ev_loop wrongly used a global variable to exit loops,
